Output data for more than one algorithm moved to a different folder.

--- a/code-postprocessing/latex-templates/templateBBOBmany.tex
+++ b/code-postprocessing/latex-templates/templateBBOBmany.tex
@@ -75,7 +75,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\graphicspath{{\bbobdatapath}}
+\graphicspath{{\bbobdatapath\algsfolder}}
 
 % pre-defined commands
 \newcommand{\DIM}{\ensuremath{\mathrm{DIM}}}
@@ -302,7 +302,7 @@ versus dimension]{
   \begin{rotate}{90}\hspace{#1em}#2
   \end{rotate}}
 \newcommand{\includeperfprof}[1]{% include and annotate at the side
-  \input{\bbobdatapath #1}%
+  \input{\bbobdatapath\algsfolder #1}%
   \includegraphics[width=0.4135\textwidth,trim=0mm 0mm 34mm 10mm, clip]{#1}%
   \raisebox{.037\textwidth}{\parbox[b][.3\textwidth]{.0868\textwidth}{\begin{scriptsize}
     \perfprofsidepanel % this is "\algaperfprof \vfill \algbperfprof \vfill" etc
@@ -370,29 +370,29 @@ ill-conditioned fcts & multi-modal fcts \\
 \mbox{\begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
 \pptablesheader
-\input{\bbobdatapath pptables_f001_05D} 
+\input{\bbobdatapath\algsfolder pptables_f001_05D} 
 
-\input{\bbobdatapath pptables_f002_05D}
+\input{\bbobdatapath\algsfolder pptables_f002_05D}
 
-\input{\bbobdatapath pptables_f003_05D}
+\input{\bbobdatapath\algsfolder pptables_f003_05D}
 
-\input{\bbobdatapath pptables_f004_05D}
+\input{\bbobdatapath\algsfolder pptables_f004_05D}
 
-\input{\bbobdatapath pptables_f005_05D}
+\input{\bbobdatapath\algsfolder pptables_f005_05D}
 
-\input{\bbobdatapath pptables_f006_05D}
+\input{\bbobdatapath\algsfolder pptables_f006_05D}
 
-\input{\bbobdatapath pptables_f007_05D}
+\input{\bbobdatapath\algsfolder pptables_f007_05D}
 
-\input{\bbobdatapath pptables_f008_05D}
+\input{\bbobdatapath\algsfolder pptables_f008_05D}
 
-\input{\bbobdatapath pptables_f009_05D}
+\input{\bbobdatapath\algsfolder pptables_f009_05D}
 
-\input{\bbobdatapath pptables_f010_05D}
+\input{\bbobdatapath\algsfolder pptables_f010_05D}
 
-\input{\bbobdatapath pptables_f011_05D}
+\input{\bbobdatapath\algsfolder pptables_f011_05D}
 
-\input{\bbobdatapath pptables_f012_05D}
+\input{\bbobdatapath\algsfolder pptables_f012_05D}
 \end{tabularx}
 
 \end{minipage}
@@ -400,29 +400,29 @@ ill-conditioned fcts & multi-modal fcts \\
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
 \pptablesheader
-\input{\bbobdatapath pptables_f013_05D}
+\input{\bbobdatapath\algsfolder pptables_f013_05D}
 
-\input{\bbobdatapath pptables_f014_05D}
+\input{\bbobdatapath\algsfolder pptables_f014_05D}
 
-\input{\bbobdatapath pptables_f015_05D}
+\input{\bbobdatapath\algsfolder pptables_f015_05D}
 
-\input{\bbobdatapath pptables_f016_05D}
+\input{\bbobdatapath\algsfolder pptables_f016_05D}
 
-\input{\bbobdatapath pptables_f017_05D}
+\input{\bbobdatapath\algsfolder pptables_f017_05D}
 
-\input{\bbobdatapath pptables_f018_05D}
+\input{\bbobdatapath\algsfolder pptables_f018_05D}
 
-\input{\bbobdatapath pptables_f019_05D}
+\input{\bbobdatapath\algsfolder pptables_f019_05D}
 
-\input{\bbobdatapath pptables_f020_05D}
+\input{\bbobdatapath\algsfolder pptables_f020_05D}
 
-\input{\bbobdatapath pptables_f021_05D}
+\input{\bbobdatapath\algsfolder pptables_f021_05D}
 
-\input{\bbobdatapath pptables_f022_05D}
+\input{\bbobdatapath\algsfolder pptables_f022_05D}
 
-\input{\bbobdatapath pptables_f023_05D}
+\input{\bbobdatapath\algsfolder pptables_f023_05D}
 
-\input{\bbobdatapath pptables_f024_05D}
+\input{\bbobdatapath\algsfolder pptables_f024_05D}
 \end{tabularx}
 \end{minipage}}
 
@@ -445,58 +445,58 @@ ill-conditioned fcts & multi-modal fcts \\
 \mbox{\begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
 \pptablesheader
-\input{\bbobdatapath pptables_f001_20D} 
+\input{\bbobdatapath\algsfolder pptables_f001_20D} 
 
-\input{\bbobdatapath pptables_f002_20D}
+\input{\bbobdatapath\algsfolder pptables_f002_20D}
 
-\input{\bbobdatapath pptables_f003_20D}
+\input{\bbobdatapath\algsfolder pptables_f003_20D}
 
-\input{\bbobdatapath pptables_f004_20D}
+\input{\bbobdatapath\algsfolder pptables_f004_20D}
 
-\input{\bbobdatapath pptables_f005_20D}
+\input{\bbobdatapath\algsfolder pptables_f005_20D}
 
-\input{\bbobdatapath pptables_f006_20D}
+\input{\bbobdatapath\algsfolder pptables_f006_20D}
 
-\input{\bbobdatapath pptables_f007_20D}
+\input{\bbobdatapath\algsfolder pptables_f007_20D}
 
-\input{\bbobdatapath pptables_f008_20D}
+\input{\bbobdatapath\algsfolder pptables_f008_20D}
 
-\input{\bbobdatapath pptables_f009_20D}
+\input{\bbobdatapath\algsfolder pptables_f009_20D}
 
-\input{\bbobdatapath pptables_f010_20D}
+\input{\bbobdatapath\algsfolder pptables_f010_20D}
 
-\input{\bbobdatapath pptables_f011_20D}
+\input{\bbobdatapath\algsfolder pptables_f011_20D}
 
-\input{\bbobdatapath pptables_f012_20D}
+\input{\bbobdatapath\algsfolder pptables_f012_20D}
 \end{tabularx}
 \end{minipage}
 \hspace{0.002\textwidth}
 \begin{minipage}[t]{0.499\textwidth}\tiny
 \centering
 \pptablesheader
-\input{\bbobdatapath pptables_f013_20D}
+\input{\bbobdatapath\algsfolder pptables_f013_20D}
 
-\input{\bbobdatapath pptables_f014_20D}
+\input{\bbobdatapath\algsfolder pptables_f014_20D}
 
-\input{\bbobdatapath pptables_f015_20D}
+\input{\bbobdatapath\algsfolder pptables_f015_20D}
 
-\input{\bbobdatapath pptables_f016_20D}
+\input{\bbobdatapath\algsfolder pptables_f016_20D}
 
-\input{\bbobdatapath pptables_f017_20D}
+\input{\bbobdatapath\algsfolder pptables_f017_20D}
 
-\input{\bbobdatapath pptables_f018_20D}
+\input{\bbobdatapath\algsfolder pptables_f018_20D}
 
-\input{\bbobdatapath pptables_f019_20D}
+\input{\bbobdatapath\algsfolder pptables_f019_20D}
 
-\input{\bbobdatapath pptables_f020_20D}
+\input{\bbobdatapath\algsfolder pptables_f020_20D}
 
-\input{\bbobdatapath pptables_f021_20D}
+\input{\bbobdatapath\algsfolder pptables_f021_20D}
 
-\input{\bbobdatapath pptables_f022_20D}
+\input{\bbobdatapath\algsfolder pptables_f022_20D}
 
-\input{\bbobdatapath pptables_f023_20D}
+\input{\bbobdatapath\algsfolder pptables_f023_20D}
 
-\input{\bbobdatapath pptables_f024_20D}
+\input{\bbobdatapath\algsfolder pptables_f024_20D}
 \end{tabularx}
 \end{minipage}}
  \caption{\label{tab:aRTs20}
