--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -54,7 +54,7 @@
 % location of pictures files
 \newcommand{\bbobdatapath}{ppdata/} % change default output folder of COCO if desired
 \input{\bbobdatapath cocopp_commands.tex}
-\graphicspath{{\bbobdatapath}}
+\graphicspath{{\bbobdatapath\algsfolder}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -411,43 +411,43 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \pptablesheader
 
-\input{\bbobdatapath pptables_f001_05D} 
+\input{\bbobdatapath\algsfolder pptables_f001_05D} 
 
-\input{\bbobdatapath pptables_f002_05D}
+\input{\bbobdatapath\algsfolder pptables_f002_05D}
 
-\input{\bbobdatapath pptables_f003_05D}
+\input{\bbobdatapath\algsfolder pptables_f003_05D}
 
-\input{\bbobdatapath pptables_f004_05D}
+\input{\bbobdatapath\algsfolder pptables_f004_05D}
 
-\input{\bbobdatapath pptables_f005_05D}
+\input{\bbobdatapath\algsfolder pptables_f005_05D}
 
-\input{\bbobdatapath pptables_f006_05D}
+\input{\bbobdatapath\algsfolder pptables_f006_05D}
 
-\input{\bbobdatapath pptables_f007_05D}
+\input{\bbobdatapath\algsfolder pptables_f007_05D}
 
-\input{\bbobdatapath pptables_f008_05D}
+\input{\bbobdatapath\algsfolder pptables_f008_05D}
 
-\input{\bbobdatapath pptables_f009_05D}
+\input{\bbobdatapath\algsfolder pptables_f009_05D}
 
-\input{\bbobdatapath pptables_f010_05D}
+\input{\bbobdatapath\algsfolder pptables_f010_05D}
 
-\input{\bbobdatapath pptables_f011_05D}
+\input{\bbobdatapath\algsfolder pptables_f011_05D}
 
-\input{\bbobdatapath pptables_f012_05D}
+\input{\bbobdatapath\algsfolder pptables_f012_05D}
 
-\input{\bbobdatapath pptables_f013_05D}
+\input{\bbobdatapath\algsfolder pptables_f013_05D}
 
-\input{\bbobdatapath pptables_f014_05D}
+\input{\bbobdatapath\algsfolder pptables_f014_05D}
 
-\input{\bbobdatapath pptables_f015_05D}
+\input{\bbobdatapath\algsfolder pptables_f015_05D}
 
-\input{\bbobdatapath pptables_f016_05D}
+\input{\bbobdatapath\algsfolder pptables_f016_05D}
 
-\input{\bbobdatapath pptables_f017_05D}
+\input{\bbobdatapath\algsfolder pptables_f017_05D}
 
-\input{\bbobdatapath pptables_f018_05D}
+\input{\bbobdatapath\algsfolder pptables_f018_05D}
 
-\input{\bbobdatapath pptables_f019_05D}
+\input{\bbobdatapath\algsfolder pptables_f019_05D}
 
 \end{tabularx}
 
@@ -458,41 +458,41 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \pptablesheader
 
-\input{\bbobdatapath pptables_f020_05D}
+\input{\bbobdatapath\algsfolder pptables_f020_05D}
 
-\input{\bbobdatapath pptables_f021_05D}
+\input{\bbobdatapath\algsfolder pptables_f021_05D}
 
-\input{\bbobdatapath pptables_f022_05D}
+\input{\bbobdatapath\algsfolder pptables_f022_05D}
 
-\input{\bbobdatapath pptables_f023_05D}
+\input{\bbobdatapath\algsfolder pptables_f023_05D}
 
-\input{\bbobdatapath pptables_f024_05D}
+\input{\bbobdatapath\algsfolder pptables_f024_05D}
 
-\input{\bbobdatapath pptables_f025_05D}
+\input{\bbobdatapath\algsfolder pptables_f025_05D}
 
-\input{\bbobdatapath pptables_f026_05D}
+\input{\bbobdatapath\algsfolder pptables_f026_05D}
 
-\input{\bbobdatapath pptables_f027_05D}
+\input{\bbobdatapath\algsfolder pptables_f027_05D}
 
-\input{\bbobdatapath pptables_f028_05D}
+\input{\bbobdatapath\algsfolder pptables_f028_05D}
 
-\input{\bbobdatapath pptables_f029_05D}
+\input{\bbobdatapath\algsfolder pptables_f029_05D}
 
-\input{\bbobdatapath pptables_f030_05D}
+\input{\bbobdatapath\algsfolder pptables_f030_05D}
 
-\input{\bbobdatapath pptables_f031_05D}
+\input{\bbobdatapath\algsfolder pptables_f031_05D}
 
-\input{\bbobdatapath pptables_f032_05D}
+\input{\bbobdatapath\algsfolder pptables_f032_05D}
 
-\input{\bbobdatapath pptables_f033_05D}
+\input{\bbobdatapath\algsfolder pptables_f033_05D}
 
-\input{\bbobdatapath pptables_f034_05D}
+\input{\bbobdatapath\algsfolder pptables_f034_05D}
 
-\input{\bbobdatapath pptables_f035_05D}
+\input{\bbobdatapath\algsfolder pptables_f035_05D}
 
-\input{\bbobdatapath pptables_f036_05D}
+\input{\bbobdatapath\algsfolder pptables_f036_05D}
 
-\input{\bbobdatapath pptables_f037_05D}
+\input{\bbobdatapath\algsfolder pptables_f037_05D}
 
 \end{tabularx}
 
@@ -504,41 +504,41 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \pptablesheader
 
-\input{\bbobdatapath pptables_f038_05D}
+\input{\bbobdatapath\algsfolder pptables_f038_05D}
 
-\input{\bbobdatapath pptables_f039_05D}
+\input{\bbobdatapath\algsfolder pptables_f039_05D}
 
-\input{\bbobdatapath pptables_f040_05D}
+\input{\bbobdatapath\algsfolder pptables_f040_05D}
 
-\input{\bbobdatapath pptables_f041_05D}
+\input{\bbobdatapath\algsfolder pptables_f041_05D}
 
-\input{\bbobdatapath pptables_f042_05D}
+\input{\bbobdatapath\algsfolder pptables_f042_05D}
 
-\input{\bbobdatapath pptables_f043_05D}
+\input{\bbobdatapath\algsfolder pptables_f043_05D}
 
-\input{\bbobdatapath pptables_f044_05D}
+\input{\bbobdatapath\algsfolder pptables_f044_05D}
 
-\input{\bbobdatapath pptables_f045_05D}
+\input{\bbobdatapath\algsfolder pptables_f045_05D}
 
-\input{\bbobdatapath pptables_f046_05D}
+\input{\bbobdatapath\algsfolder pptables_f046_05D}
 
-\input{\bbobdatapath pptables_f047_05D}
+\input{\bbobdatapath\algsfolder pptables_f047_05D}
 
-\input{\bbobdatapath pptables_f048_05D}
+\input{\bbobdatapath\algsfolder pptables_f048_05D}
 
-\input{\bbobdatapath pptables_f049_05D}
+\input{\bbobdatapath\algsfolder pptables_f049_05D}
 
-\input{\bbobdatapath pptables_f050_05D}
+\input{\bbobdatapath\algsfolder pptables_f050_05D}
 
-\input{\bbobdatapath pptables_f051_05D}
+\input{\bbobdatapath\algsfolder pptables_f051_05D}
 
-\input{\bbobdatapath pptables_f052_05D}
+\input{\bbobdatapath\algsfolder pptables_f052_05D}
 
-\input{\bbobdatapath pptables_f053_05D}
+\input{\bbobdatapath\algsfolder pptables_f053_05D}
 
-\input{\bbobdatapath pptables_f054_05D}
+\input{\bbobdatapath\algsfolder pptables_f054_05D}
 
-\input{\bbobdatapath pptables_f055_05D}
+\input{\bbobdatapath\algsfolder pptables_f055_05D}
 
 \end{tabularx}
 
@@ -565,43 +565,43 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \pptablesheader
 
-\input{\bbobdatapath pptables_f001_20D} 
+\input{\bbobdatapath\algsfolder pptables_f001_20D} 
 
-\input{\bbobdatapath pptables_f002_20D}
+\input{\bbobdatapath\algsfolder pptables_f002_20D}
 
-\input{\bbobdatapath pptables_f003_20D}
+\input{\bbobdatapath\algsfolder pptables_f003_20D}
 
-\input{\bbobdatapath pptables_f004_20D}
+\input{\bbobdatapath\algsfolder pptables_f004_20D}
 
-\input{\bbobdatapath pptables_f005_20D}
+\input{\bbobdatapath\algsfolder pptables_f005_20D}
 
-\input{\bbobdatapath pptables_f006_20D}
+\input{\bbobdatapath\algsfolder pptables_f006_20D}
 
-\input{\bbobdatapath pptables_f007_20D}
+\input{\bbobdatapath\algsfolder pptables_f007_20D}
 
-\input{\bbobdatapath pptables_f008_20D}
+\input{\bbobdatapath\algsfolder pptables_f008_20D}
 
-\input{\bbobdatapath pptables_f009_20D}
+\input{\bbobdatapath\algsfolder pptables_f009_20D}
 
-\input{\bbobdatapath pptables_f010_20D}
+\input{\bbobdatapath\algsfolder pptables_f010_20D}
 
-\input{\bbobdatapath pptables_f011_20D}
+\input{\bbobdatapath\algsfolder pptables_f011_20D}
 
-\input{\bbobdatapath pptables_f012_20D}
+\input{\bbobdatapath\algsfolder pptables_f012_20D}
 
-\input{\bbobdatapath pptables_f013_20D}
+\input{\bbobdatapath\algsfolder pptables_f013_20D}
 
-\input{\bbobdatapath pptables_f014_20D}
+\input{\bbobdatapath\algsfolder pptables_f014_20D}
 
-\input{\bbobdatapath pptables_f015_20D}
+\input{\bbobdatapath\algsfolder pptables_f015_20D}
 
-\input{\bbobdatapath pptables_f016_20D}
+\input{\bbobdatapath\algsfolder pptables_f016_20D}
 
-\input{\bbobdatapath pptables_f017_20D}
+\input{\bbobdatapath\algsfolder pptables_f017_20D}
 
-\input{\bbobdatapath pptables_f018_20D}
+\input{\bbobdatapath\algsfolder pptables_f018_20D}
 
-\input{\bbobdatapath pptables_f019_20D}
+\input{\bbobdatapath\algsfolder pptables_f019_20D}
 
 \end{tabularx}
 
@@ -612,41 +612,41 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \pptablesheader
 
-\input{\bbobdatapath pptables_f020_20D}
+\input{\bbobdatapath\algsfolder pptables_f020_20D}
 
-\input{\bbobdatapath pptables_f021_20D}
+\input{\bbobdatapath\algsfolder pptables_f021_20D}
 
-\input{\bbobdatapath pptables_f022_20D}
+\input{\bbobdatapath\algsfolder pptables_f022_20D}
 
-\input{\bbobdatapath pptables_f023_20D}
+\input{\bbobdatapath\algsfolder pptables_f023_20D}
 
-\input{\bbobdatapath pptables_f024_20D}
+\input{\bbobdatapath\algsfolder pptables_f024_20D}
 
-\input{\bbobdatapath pptables_f025_20D}
+\input{\bbobdatapath\algsfolder pptables_f025_20D}
 
-\input{\bbobdatapath pptables_f026_20D}
+\input{\bbobdatapath\algsfolder pptables_f026_20D}
 
-\input{\bbobdatapath pptables_f027_20D}
+\input{\bbobdatapath\algsfolder pptables_f027_20D}
 
-\input{\bbobdatapath pptables_f028_20D}
+\input{\bbobdatapath\algsfolder pptables_f028_20D}
 
-\input{\bbobdatapath pptables_f029_20D}
+\input{\bbobdatapath\algsfolder pptables_f029_20D}
 
-\input{\bbobdatapath pptables_f030_20D}
+\input{\bbobdatapath\algsfolder pptables_f030_20D}
 
-\input{\bbobdatapath pptables_f031_20D}
+\input{\bbobdatapath\algsfolder pptables_f031_20D}
 
-\input{\bbobdatapath pptables_f032_20D}
+\input{\bbobdatapath\algsfolder pptables_f032_20D}
 
-\input{\bbobdatapath pptables_f033_20D}
+\input{\bbobdatapath\algsfolder pptables_f033_20D}
 
-\input{\bbobdatapath pptables_f034_20D}
+\input{\bbobdatapath\algsfolder pptables_f034_20D}
 
-\input{\bbobdatapath pptables_f035_20D}
+\input{\bbobdatapath\algsfolder pptables_f035_20D}
 
-\input{\bbobdatapath pptables_f036_20D}
+\input{\bbobdatapath\algsfolder pptables_f036_20D}
 
-\input{\bbobdatapath pptables_f037_20D}
+\input{\bbobdatapath\algsfolder pptables_f037_20D}
 
 \end{tabularx}
 
@@ -658,41 +658,41 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 
 \pptablesheader
 
-\input{\bbobdatapath pptables_f038_20D}
+\input{\bbobdatapath\algsfolder pptables_f038_20D}
 
-\input{\bbobdatapath pptables_f039_20D}
+\input{\bbobdatapath\algsfolder pptables_f039_20D}
 
-\input{\bbobdatapath pptables_f040_20D}
+\input{\bbobdatapath\algsfolder pptables_f040_20D}
 
-\input{\bbobdatapath pptables_f041_20D}
+\input{\bbobdatapath\algsfolder pptables_f041_20D}
 
-\input{\bbobdatapath pptables_f042_20D}
+\input{\bbobdatapath\algsfolder pptables_f042_20D}
 
-\input{\bbobdatapath pptables_f043_20D}
+\input{\bbobdatapath\algsfolder pptables_f043_20D}
 
-\input{\bbobdatapath pptables_f044_20D}
+\input{\bbobdatapath\algsfolder pptables_f044_20D}
 
-\input{\bbobdatapath pptables_f045_20D}
+\input{\bbobdatapath\algsfolder pptables_f045_20D}
 
-\input{\bbobdatapath pptables_f046_20D}
+\input{\bbobdatapath\algsfolder pptables_f046_20D}
 
-\input{\bbobdatapath pptables_f047_20D}
+\input{\bbobdatapath\algsfolder pptables_f047_20D}
 
-\input{\bbobdatapath pptables_f048_20D}
+\input{\bbobdatapath\algsfolder pptables_f048_20D}
 
-\input{\bbobdatapath pptables_f049_20D}
+\input{\bbobdatapath\algsfolder pptables_f049_20D}
 
-\input{\bbobdatapath pptables_f050_20D}
+\input{\bbobdatapath\algsfolder pptables_f050_20D}
 
-\input{\bbobdatapath pptables_f051_20D}
+\input{\bbobdatapath\algsfolder pptables_f051_20D}
 
-\input{\bbobdatapath pptables_f052_20D}
+\input{\bbobdatapath\algsfolder pptables_f052_20D}
 
-\input{\bbobdatapath pptables_f053_20D}
+\input{\bbobdatapath\algsfolder pptables_f053_20D}
 
-\input{\bbobdatapath pptables_f054_20D}
+\input{\bbobdatapath\algsfolder pptables_f054_20D}
 
-\input{\bbobdatapath pptables_f055_20D}
+\input{\bbobdatapath\algsfolder pptables_f055_20D}
 
 \end{tabularx}
 
@@ -802,7 +802,7 @@ The following pages present additional results that do not fit into the actual p
 }
 \end{figure*}
 
-\IfFileExists{\bbobdatapath ppfig2_f001.pdf}{}{\end{document}}
+\IfFileExists{\bbobdatapath\algsfolder ppfig2_f001.pdf}{}{\end{document}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
