--- a/code-postprocessing/latex-templates/templateBBOBcmp.tex
+++ b/code-postprocessing/latex-templates/templateBBOBcmp.tex
@@ -72,7 +72,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\graphicspath{{\bbobdatapath}}
+\graphicspath{{\bbobdatapath\algsfolder}}
 
 % pre-defined commands
 \newcommand{\DIM}{\ensuremath{\mathrm{DIM}}}
@@ -409,12 +409,116 @@ of overall function evaluations for any unsuccessful trial under consideration.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{table*}
+\mbox{\begin{minipage}[t]{0.495\textwidth}
 \centering
-\hfill5-D\hfill20-D\hfill~\\[1ex]
+5-D\\[5pt]
 \tiny
-\mbox{
-\input{\bbobdatapath pptable2_05D_noiselessall}\hfill%
-\input{\bbobdatapath pptable2_20D_noiselessall}}
+\pptablesheader
+\input{\bbobdatapath\algsfolder pptables_f001_05D} 
+
+\input{\bbobdatapath\algsfolder pptables_f002_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f003_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f004_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f005_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f006_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f007_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f008_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f009_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f010_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f011_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f012_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f013_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f014_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f015_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f016_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f017_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f018_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f019_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f020_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f021_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f022_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f023_05D}
+
+\input{\bbobdatapath\algsfolder pptables_f024_05D}
+\end{tabularx}
+\end{minipage}}
+\hspace{0.002\textwidth}
+\mbox{\begin{minipage}[t]{0.495\textwidth}
+\centering
+20-D\\[5pt]
+\tiny
+\pptablesheader
+\input{\bbobdatapath\algsfolder pptables_f001_20D} 
+
+\input{\bbobdatapath\algsfolder pptables_f002_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f003_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f004_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f005_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f006_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f007_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f008_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f009_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f010_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f011_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f012_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f013_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f014_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f015_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f016_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f017_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f018_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f019_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f020_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f021_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f022_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f023_20D}
+
+\input{\bbobdatapath\algsfolder pptables_f024_20D}
+\end{tabularx}
+\end{minipage}}
+
 \caption{\label{tab:aRTs}
 \bbobpptablestwolegend{dimensions $5$ (left) and $20$ (right)}{48}
 }
