--- a/code-postprocessing/latex-templates/templateBBOBcmp.tex
+++ b/code-postprocessing/latex-templates/templateBBOBcmp.tex
@@ -520,7 +520,7 @@ of overall function evaluations for any unsuccessful trial under consideration.
 \end{minipage}}
 
 \caption{\label{tab:aRTs}
-\bbobpptablestwolegend{dimensions $5$ (left) and $20$ (right)}{48}
+\bbobpptablesmanylegend{dimensions $5$ (left) and $20$ (right)}{48}
 }
 \end{table*}
 
